Signed-off-by: blong7976 <2456399912@qq.com>

--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
-		<script src="http://www.jq22.com/demo/jquerycounterup201905121719/jquery.waypoints.min.js"></script>
-		<script src="http://www.jq22.com/demo/jquerycounterup201905121719/jquery.counterup.min.js"></script>
+		<script src="https://www.jq22.com/demo/jquerycounterup201905121719/jquery.waypoints.min.js"></script>
+		<script src="https://www.jq22.com/demo/jquerycounterup201905121719/jquery.counterup.min.js"></script>
 		<style lang="">
 			.v_list{
 				box-sizing: border-box;
