--- a/8.html
+++ b/8.html
@@ -16,8 +16,8 @@
 
         <div class="map-box" id="map"></div>
         
-        <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-        <script src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+        <script src="https://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript">
             $(function() {
                 var dom = document.getElementById("map");
